--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#181A20"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/nav_bg">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -15,45 +15,53 @@
             android:id="@+id/fragment_home_user_photo"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="24dp"
-            android:layout_marginEnd="24dp"
-            android:src="@mipmap/ic_launcher_round"
-            android:scaleType="centerCrop"
             android:background="@drawable/bg_item_event_image_corners"
-
+            android:scaleType="centerCrop"
+            android:src="@mipmap/ic_launcher_round"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/fragment_home_title"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/linearLayoutName"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:text="Ловите момент 🤟"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            app:layout_constraintStart_toEndOf="@id/fragment_home_user_photo"
-            app:layout_constraintTop_toTopOf="@id/fragment_home_user_photo" />
+            android:layout_marginStart="10dp"
+            android:gravity="center_vertical"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toTopOf="@+id/fragment_home_search_edit_text"
+            app:layout_constraintEnd_toStartOf="@+id/fragment_home_notification"
+            app:layout_constraintStart_toEndOf="@+id/fragment_home_user_photo"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/fragment_home_user_nickname"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="@id/fragment_home_title"
-            app:layout_constraintTop_toBottomOf="@id/fragment_home_title" />
+            <TextView
+                android:id="@+id/fragment_home_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Ловите момент 🤟"
+                android:textColor="@color/white"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/fragment_home_user_nickname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:visibility="gone" />
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/fragment_home_notification"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_marginTop="24dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginEnd="16dp"
             android:src="@drawable/ic_notification_home"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -61,7 +69,7 @@
             android:id="@+id/fragment_home_search_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="25dp"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/bg_gradient_dark_grey_button"
             android:drawableLeft="@drawable/ic_search"
@@ -72,7 +80,7 @@
             android:textColor="@color/white"
             android:textColorHint="#9D9E9E"
             android:textSize="14sp"
-            app:layout_constraintTop_toBottomOf="@id/fragment_home_user_nickname" />
+            app:layout_constraintTop_toBottomOf="@id/fragment_home_user_photo" />
 
         <ImageView
             android:id="@+id/fragment_home_filter"
@@ -89,7 +97,7 @@
             android:id="@+id/fragment_home_popular_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="24dp"
             android:text="Популярные"
             android:textColor="@color/white"
@@ -101,12 +109,12 @@
             android:id="@+id/fragment_home_popular_title_show"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="24dp"
             android:layout_marginTop="24dp"
+            android:layout_marginEnd="16dp"
             android:text="Посмотреть все"
-            android:visibility="invisible"
             android:textColor="@color/nav_focus_color"
             android:textSize="20sp"
+            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/fragment_home_search_edit_text" />
 
@@ -115,15 +123,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/fragment_home_popular_title" />
 
         <TextView
             android:id="@+id/fragment_home_upcoming_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="24dp"
             android:text="Предстоящие 🔥"
             android:textColor="@color/white"
@@ -135,12 +143,12 @@
             android:id="@+id/fragment_home_upcoming_title_show"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="24dp"
             android:layout_marginTop="24dp"
+            android:layout_marginEnd="16dp"
             android:text="Посмотреть все"
-            android:visibility="invisible"
             android:textColor="@color/nav_focus_color"
             android:textSize="20sp"
+            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/fragment_home_popular" />
 
@@ -149,29 +157,27 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/fragment_home_upcoming_title" />
-
-        <ProgressBar
-            android:id="@+id/fragment_home_upcoming_events_progress_bar"
-            android:layout_width="0dp"
-            android:visibility="gone"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/fragment_home_category_recycler_view" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/fragment_home_upcoming_events_recycler_view"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
-            android:layout_marginStart="6dp"
-            android:layout_marginEnd="24dp"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/fragment_home_category_recycler_view" />
+
+        <ProgressBar
+            android:id="@+id/fragment_home_upcoming_events_progress_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/fragment_home_category_recycler_view" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
