--- a/app/src/main/res/layout/fragment_profile_auth.xml
+++ b/app/src/main/res/layout/fragment_profile_auth.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#181a20">
+    android:background="@color/nav_bg"
+    android:scrollbars="none">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -15,8 +16,8 @@
             android:id="@+id/fragment_auth_return_button"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
             android:scaleType="center"
             android:src="@drawable/ic_arrow_white_left"
             app:layout_constraintStart_toStartOf="parent"
@@ -24,10 +25,10 @@
 
         <ImageView
             android:id="@+id/image1"
-            android:layout_width="180dp"
-            android:layout_height="180dp"
-            android:layout_marginTop="60dp"
-            android:src="@drawable/ic_logo"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="130dp"
+            android:src="@drawable/logo_event"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -48,7 +49,7 @@
             android:id="@+id/fragment_auth_login_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="25dp"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="40dp"
             android:background="@drawable/bg_gradient_dark_grey_button"
             android:drawableStart="@drawable/ic_login_auth"
@@ -64,7 +65,7 @@
             android:id="@+id/fragment_auth_password_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="25dp"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/bg_gradient_dark_grey_button"
             android:drawableStart="@drawable/ic_auth_password"
@@ -106,7 +107,7 @@
             android:id="@+id/fragment_auth_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="25dp"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/bg_purple_button"
             android:text="@string/log_in"
@@ -119,7 +120,7 @@
             android:id="@+id/view1"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="24dp"
             android:layout_marginTop="28dp"
             android:layout_marginEnd="12dp"
             android:background="#35383F"
@@ -134,7 +135,7 @@
             android:layout_height="1dp"
             android:layout_marginStart="12dp"
             android:layout_marginTop="28dp"
-            android:layout_marginEnd="32dp"
+            android:layout_marginEnd="24dp"
             android:background="#35383F"
             android:paddingTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
