--- a/app/src/main/res/layout/fragment_password_generation.xml
+++ b/app/src/main/res/layout/fragment_password_generation.xml
@@ -114,7 +114,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="48dp"
             android:gravity="center"
-            android:text="Нажимая кнопку Создать, вы соглашаетесь с политикой конфеденциальности и правилами пользования."
+            android:text="@string/politics"
             android:textColor="@color/white"
             android:textColorHint="#9D9E9E"
             android:textSize="16sp"
