--- a/app/src/main/res/layout/dialog_gender_selection.xml
+++ b/app/src/main/res/layout/dialog_gender_selection.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_width="wrap_content"
-        android:text="Выберите пол"
+        android:text="@string/choose_sex_type"
         android:textColor="@color/app_light"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -26,7 +26,7 @@
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
         android:layout_width="0dp"
-        android:text="Муж"
+        android:text="@string/type_man"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +46,7 @@
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
         android:layout_width="0dp"
-        android:text="Женщина"
+        android:text="@string/type_woman"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
